<resources>
    <string name="app_name">LaLista-draft</string>
    <string name="action_edit">Edit</string>
    <string name="action_settings">Settings</string>
    <string name="action_up">Up</string>
    <string name="new_list">New List</string>
    <string name="list_name">List Name</string>
    <string name="action_delete">Delete</string>
    <string name="action_confirm_delete_current" type="id">Delete current list?</string>
    <string name="action_confirm_delete_selected" type="id">Delete selected lists?</string>
    <string name="action_view">View mode</string>
    <string name="title_activity_debug">DebugActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="lista_layout_manager_class">LinearLayoutManager</string>
    <string name="action_cancel">CANCEL</string>
    <string name="selected_count">{0}</string>
    <string name="action_select">Select</string>
    <string name="action_select_all">Select all</string>
    <string name="action_copy">Copy</string>
    <string name="action_move">Move</string>
    <string name="action_paste">Paste</string>
    <string name="action_confirm_copy_here">Copy selected lists here?</string>
    <string name="action_confirm_move_here">Move selected lists here?</string>
    <string name="action_here_cancelled">Lists cannot move to itself</string>
</resources>
