<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/ic_select_all_black_24dp"
        android:title="@string/action_select_all"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/action_cut"
        android:icon="@drawable/ic_content_cut_black_24dp"
        android:title="@string/action_cut"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/ic_content_copy_black_24dp"
        android:title="@string/action_copy"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/action_paste"
        android:icon="@drawable/ic_content_paste_black_24dp"
        android:title="@string/action_paste"
        app:showAsAction="always"
        />

</menu>